# bus-booking-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.tools  README.md  docker-compose.yml  health_check.py  inedx.html  main.py  pyproject.toml  reset_bookings.py
app/: config.py
app/agents/: booking_agent.py  clarification_agent.py  graph.py  orchestrator.py  reflection_agent.py  search_agent.py  state.py  support_agent.py
app/api/: main.py
app/api/static/: index.html
app/core/: config.py
app/memory/: user_memory.py
app/rag/: embedder.py  indexer.py  retriever.py
app/tools/: mcp_client.py  tool_server.py
data/: build_documents.py  generate.py
docs/: SETUP.md
evals/: rag_eval.py  results.json  test_cases.md
scripts/: build_documents.py  generate_data.py
